# langchain-course

./: .db_model_sync.py.swp  .env  .gitignore  .python-version  1_agent_loop_langchain_tool_calling.py  2_agent_loop_raw_function_calling.py  Exercise1.py  Ollama_Demo.py  Questions.txt  README.md  agent_loop_langchain_calling.py  app.py  from_ollama.py  h --set-upstream origin AIAgent  ingestion.py  main.py  main2.py  output.txt  prompt.py  pyproject.toml  raw_react_prompt.py  requirements.txt  schemas.py  search_model..py  structuredResponse.py  summarize_text.py
.chroma/: chroma.sqlite3
.claude/logs/: subagent-history.jsonl
.claude/sessions/: .last_inbox_check
.claude/state/: tool-failure-counter.txt
11-LangGraph/: main.py
12-Reflection-Agent/: main.py
12-Reflexion-Agent/: chains.py
13-Agentic-RAG/.chroma/: chroma.sqlite3
13-Reflexion Agent/: schemas.py
5-Function-Tool-Calling/: main.py
6-Function-Tool-Calling/: Cloude-4p5.py
6-RAG/: embedding_document.py
7-RAG/: test_pinecone  use_embedding.py
7-RAG/data/: medium-blog-1.txt
7-documentation-helper/: ingestion.py  main.py
8-documentation-helper/: Tavily Demo Tutorial.ipynb  crawl_via_map_extract.py  crawl_via_map_extract_repo.py
ReAct-Agent/: main.py
ReAct-Agent-Old/: main.py
ReAct-search-agent/: main.py  main_repo.py  schemas.py
agentic_rag_13/: ingestion.py  main.py
agentic_rag_13/graph/: graph.py  (+1 more)
examples/: minimax_hello_world.py  multi_provider_example.py
react-search-agent/: main.py  pyproject.toml
tests/: test_integration_minimax.py  test_llm_provider.py
tools/: tavily_search.py
utils/: llm_provider.py
(+13 files in other folders)
