[project]
name = "langchain-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.0",
    "langchain>=1.1.2",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.1.0",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.13",
    "langchainhub>=0.1.21",
    "langgraph>=1.0.4",
    "openai>=2.9.0",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.8",
    "streamlit>=1.52.2",
    "tavily-python>=0.7.14",
]

# [tool.ruff]
# ignore = ["E402"]