[project]
name = "langchain-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.3.1",
    "dotenv>=0.9.9",
    "isort>=8.0.1",
    "langchain>=1.2.15",
    "langchain-core>=1.2.28",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.12",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.1.6",
    "python-dotenv>=1.2.2",
    "tavily>=1.1.0",
]
